# lawnbot

./: .gitmodules  README.md  bestoutput2.txt  bestphysicalmap.yaml  install_dependencies.sh  launchFile1.output  outputBest.txt  outputBest1.txt  outtt.txt
src/main_logic_controller/: package.xml  setup.cfg  setup.py  turtlebotrviz.rviz
src/main_logic_controller/config/: .launchFile.output.swp  .mapper_params_online_async.yaml.swp  41xxRobotRviz.rviz  bessstmapJ25.pgm  bessstmapJ25.yaml  bestmap1000.pgm  bestmap1000.yaml  bestphysicalmap.pgm  bestsofar.pgm  bestsofar.yaml  bestsofar1240.data  bestsofar1240.pgm  bestsofar1240.yaml  distorted_map.pgm  distorted_map.yaml  lab_world  launchFile.output  mapforzelin.pgm  mapforzelin.yaml  mapper_params_online_async.yaml  my_controllers.yaml  mymap1.data  mymap1.pgm  mymap1.yaml  mymap11.data  mymap11.pgm  mymap11.yaml  na2_params.yaml  na2_params.yaml.save  nav2  nav2_params.yaml  nav2_paramsBEFOREADDISSON.yaml  nav2_paramsFIRSTVERSION.yaml  nav2_paramsJ15.yaml  nav2_paramsJ15_3:34pm.yaml  nav2_params_J14.yaml  nav2idk_params.yaml  ramys_map.pgm  ramys_map.yaml  twist_mux_joy.yaml  (+2 more)
src/main_logic_controller/launch/: display.launch.py  explorer.launch.py  launch_file_demo.py  launch_robot.launch.py  nav.launch.py  sim_gazebo.launch.py
src/main_logic_controller/main_logic_controller/: 41xx_main_logic_controller.py  README.md  bestlogversion.txt  cmd_vel_emulator.py  exploration_monitor.py  kangaroo_test.py  motor_controller.py  motor_controller.py.save  motor_controller.py.save.1  motor_controller.py.save.2  motor_controller.py.save.3  my_robotBackup.urdf  object_detector.py  odom_bridge.py  odom_test.py  (+4 more)
(+332 files in other folders)
