<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>main_logic_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rabdulwa@uoguelph.ca">ramy_abdulwahed</maintainer>
  <license>TODO: License declaration</license>
  
  <build_depend>rosidl_default_generators</build_depend> <!--Needed to use any ROS2 interface custom types (.msg).-->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>main_logic_controller_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>time</exec_depend>
  <exec_depend>custom_message</exec_depend>
  <exec_depend>itertools</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>math</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>custom_explorer</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
